--- a/k8s/secret-thanos.yaml
+++ b/k8s/secret-thanos.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: thanos-remote-write
-  namespace: monitoring
+  namespace: newmonitoring
 type: Opaque
 stringData:
-  THAOS_REMOTE_WRITE_URL: "https://REPLACE_ME_THANOS_RECEIVER:10908/api/v1/receive"
+  THAOS_REMOTE_WRITE_URL: "http://82.223.13.241:10908/api/v1/receive"
 # If your Thanos receiver requires auth token, store it here
-  THAOS_REMOTE_WRITE_BEARER_TOKEN: "REPLACE_ME_TOKEN"
+  # THAOS_REMOTE_WRITE_BEARER_TOKEN: "REPLACE_ME_TOKEN"
