--- a/k8s/app-configmap.yaml
+++ b/k8s/app-configmap.yaml
@@ -5,9 +5,8 @@ metadata:
   namespace: app
 data:
   application.properties: |
-  # Example properties — adjust for your app
     server.port=8080
     management.endpoints.web.exposure.include=health,info,prometheus
     management.endpoint.health.show-details=always
-    management.metrics.export.simple.enabled=true
+    management.metrics.export.prometheus.enabled=true
     management.endpoints.web.base-path=/actuator
