--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -1,43 +1,60 @@
 apiVersion: apps/v1
-labels:
-  app: springboot
+kind: Deployment
+metadata:
+  name: springboot-app
+  namespace: app
+  labels:
+    app: springboot
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/path: "/actuator/prometheus"
     prometheus.io/port: "8080"
 spec:
-  containers:
-    - name: springboot
-      image: REPLACE_ME_REGISTRY/your-app:REPLACE_ME_TAG
-      imagePullPolicy: IfNotPresent
-      ports:
-        - containerPort: 8080
-      readinessProbe:
-        httpGet:
-          path: /actuator/health
-          port: 8080
-        initialDelaySeconds: 10
-        periodSeconds: 10
-        failureThreshold: 3
-      livenessProbe:
-        httpGet:
-          path: /actuator/health
-          port: 8080
-        initialDelaySeconds: 30
-        periodSeconds: 20
-        failureThreshold: 5
-      resources:
-        requests:
-          cpu: "200m"
-          memory: "256Mi"
-        limits:
-          cpu: "1000m"
-          memory: "1Gi"
-      envFrom:
-        - configMapRef:
-            name: spring-config
-  imagePullSecrets:
-    - name: regcred
+  replicas: 2
+  selector:
+    matchLabels:
+      app: springboot
+  template:
+    metadata:
+      labels:
+        app: springboot
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/actuator/prometheus"
+        prometheus.io/port: "8080"
+    spec:
+      containers:
+        - name: springboot
+          image: ac3modelcofiguration:latest
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            failureThreshold: 5
+          resources:
+            requests:
+              cpu: "200m"
+              memory: "256Mi"
+            limits:
+              cpu: "1000m"
+              memory: "1Gi"
+          envFrom:
+            - configMapRef:
+                name: spring-config
+      imagePullSecrets:
+        - name: regcred
 ---
 apiVersion: v1
 kind: Service
