--- a/exampleconfig/src/main/resources/application.properties
+++ b/exampleconfig/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=exampleconfig
+server.port=8080
+server.address=0.0.0.0
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.health.probes.enabled=true
+management.server.port=8080
