--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -33,16 +33,18 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8080
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            failureThreshold: 3
+            initialDelaySeconds: 90
+            periodSeconds: 15
+            failureThreshold: 10
+            timeoutSeconds: 10
           livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
-            initialDelaySeconds: 30
-            periodSeconds: 20
+            initialDelaySeconds: 120
+            periodSeconds: 30
             failureThreshold: 5
+            timeoutSeconds: 10
           resources:
             requests:
               cpu: "200m"
@@ -53,8 +55,6 @@ spec:
           envFrom:
             - configMapRef:
                 name: spring-config
-      imagePullSecrets:
-        - name: regcred
 ---
 apiVersion: v1
 kind: Service
@@ -67,10 +67,11 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 30080
       name: http
   selector:
     app: springboot
-  type: ClusterIP
+  type: NodePort
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
